monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0118/A0118.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0118;

grammar A0118 {

  symbolrule A =
    boolean;

}
